[package]
name = "tinyparse"
version = "0.3.3"
edition = "2021"
description = "A tiny combinator parser library."
authors = ["Edvin Flodin"]
license = "MIT"
keywords = ["combinator", "parser", "tiny", "simple"]
repository = "https://github.com/Bitbot25/tinyparse"
documentation = "https://docs.rs/tinyparse/0.3.3/tinyparse/"

[dependencies]
tinyparse_macro = { path = "../tinyparse_macro" }
unicode-xid = "0.2.3"